perviy variant statyi

--- a/flask_app/env/templates/type_article.html
+++ b/flask_app/env/templates/type_article.html
@@ -4,8 +4,23 @@
 
 
 <div class="container">
-  <img src="static/images/img.jpg" alt="img" style="width:100%;">
-  <div style="centered">Centered</div>
+    <img src="static/images/img.jpg" alt="img" style="width:100%;">
+    <div id="rectangle"></div>
+    <div class="centered">Centered</div>
+</div>
+<div class="column">
+    <p>Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот!
+        Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот!
+        Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот!
+        Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот!
+        Макс бот!
+        Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот!
+        Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот!
+        Макс бот! Макс бот! Макс бот! Макс бот!</p>
+    <p>Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот!
+        Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот!
+        Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот! Макс бот!
+        Макс бот! Макс бот! Макс бот! Макс бот!</p>
 </div>
 
 {% endblock %}
