--- a/flask_app/env/templates/base.html
+++ b/flask_app/env/templates/base.html
@@ -11,7 +11,7 @@
     padding-left: 10%;
     padding-right: 10%;
     margin: 5%;
-    background: #17a2b8;
+    background: #333333;
     -webkit-border-bottom-right-radius: 2%;
     -webkit-border-top-right-radius: 2%;
     -webkit-border-bottom-left-radius: 2%;
@@ -19,7 +19,7 @@
 
     }
     nav#sidebar {
-    color: #FFFFFF;
+    color: #947b00;
     }
     div#content {
     color: #FFFFFF;
@@ -27,7 +27,7 @@
     padding-right: 20%;
     }
     aside {
-    background: #17a2b8;
+    background: #333333;
     padding: 10px;
     width: 17%;
     float: left;
@@ -47,17 +47,81 @@
     font-size: 8pt;
     }
     #rectangle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 220px;
     height: 120px;
     background: #4da1f7;
     }
-    .centered {
-    position:absolute;
-    top:30%;
-    left:50%;
-    transform:translate(-50%, -50%);
-    font-size:18px
+    .container {
+    position: relative;
     }
+    /* Centered text */
+    .centered {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    footer{background:#1a1a1a;} /*фон подвала */
+        .social-icons ul{
+            list-style: none;
+            display: flex;
+            justify-content: center;
+        }
+        .social-icons ul li a span {
+        color: #947b00;
+        width: 34px;
+        background: #fff;
+        height: 34px;
+        text-align: center;
+        line-height: 34px;
+        border-radius: 20px;
+        font-size: 13px;
+        margin: 0px 2px;
+        border-radius: 20px;
+        font-size: 14px;
+        margin: 0px 2px;
+        transition: 0.5s all;
+        -webkit-transition: 0.5s all;
+        transition: 0.5s all;
+        -moz-transition: 0.5s all;
+        }
+        .social-icons ul li a span:hover{color:#0ccbf1;}
+        .copy-bottom-txt p{font-size:18px;
+        color:#fff;
+        }
+        .social-icons ul li:nth-child(2){
+            margin: 0 10px;
+        }
+        .copy-bottom-txt p a {
+        font-size: 18px;
+        color:#947b00;
+        letter-spacing: 1px;
+        transition: .4s;
+        }
+        .copy-bottom-txt p a:hover {
+        color: #000;
+        text-decoration: underline;
+        padding-top: 4px;
+        font-weight: 700;
+        }
+        .column {
+        -webkit-column-width: 200px;
+        -moz-column-width: 200px;
+        column-width: 200px;
+        -webkit-column-count: 3;
+        -moz-column-count: 3;
+        column-count: 3;
+        -webkit-column-gap: 30px;
+        -moz-column-gap: 30px;
+        column-gap: 30px;
+        -webkit-column-rule: 1px solid #ccc;
+        -moz-column-rule: 1px solid #ccc;
+        column-rule: 1px solid #ccc;
+       }
 
 
     </style>
@@ -104,6 +168,23 @@
             </main>
         </div>
     </div>
+
+<footer class="py-3">
+         <div class="copy-bottom-txt text-center py-3">
+            <p>
+               © 2020 Name Site. All Rights Reserved | Design by <a href="#" target="_blank">Pomor and 4ekhov</a>
+            </p>
+         </div>
+         <div class="social-icons mt-lg-3 mt-2 text-center">
+            <ul>
+               <li><a href="#"><span class="fa fa-telegram"></span></a></li>
+               <li><a href="#"><span class="fa fa-vk"></span></a></li>
+               <li><a href="#"><span class="fa fa-steam"></span></a></li>
+            </ul>
+         </div>
+    </footer>
+    <!-- CDN подключение иконок fontawesome -->
+    <script src="https://use.fontawesome.com/df966d76e1.js"></script>
 </body>
 
 
