--- a/flask_app/env/templates/base.html
+++ b/flask_app/env/templates/base.html
@@ -5,7 +5,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <style>
     #content-holder{
     padding-left: 10%;
@@ -18,8 +19,28 @@
     -webkit-border-top-left-radius: 2%;
 
     }
-    nav#sidebar {
-    color: #947b00;
+    .topnav {
+    overflow: hidden;
+    background-color: #333;
+    }
+
+    .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    }
+
+    .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+    }
+
+    .topnav a.active {
+    background-color: #4CAF50;
+    color: white;
     }
     div#content {
     color: #FFFFFF;
@@ -34,9 +55,6 @@
     padding-left: 2.5%;
     padding-right: 2.5%;
     -webkit-border-bottom-right-radius: 5%;
-    }
-    a {
-    color: #FFFFFF;
     }
     a:hover {
     color: #CE242B;
@@ -122,7 +140,46 @@
         -moz-column-rule: 1px solid #ccc;
         column-rule: 1px solid #ccc;
        }
+       a {
+       color: #FFFFFF;
+  text-decoration: none;
+    }
 
+    ul {
+      background: #1a1a1a;
+      list-style: none;
+    }
+
+    li {
+      color: #fff;
+      background: #1a1a1a;
+      display: block;
+      float: left;
+      padding: 2px;
+      position: relative;
+    }
+
+    li a {
+      color: #333333;
+    }
+
+    li:hover {
+      background: #1a1a1a;
+      cursor: pointer;
+    }
+
+    ul li ul {
+      background: #333333;
+      visibility: hidden;
+      position: absolute;
+      left: 0;
+      display: none;
+    }
+
+    ul li:hover > ul{
+      visibility: visible;
+      display: block;
+    }
 
     </style>
     <title>{{title}}</title>
@@ -130,61 +187,61 @@
 
 
 <body>
-    <header>
-      <nav class="navbar navbar-light bg-info">
-          <a href="/">Клуб любителей матушки Земли</a>
-          {% if current_user.is_authenticated %}
-          <a class="navbar-brand" href="/logout" style="color:FFFFFF;">{{ current_user.name }}</a>
-          {% else %}
-          <p>
-              <a class="btn btn-dark" href="/register">Зарегистрироваться</a>
-              <a class="btn btn-dark" href="/login">Войти</a>
-          </p>
-          {% endif %}
-      </nav>
-    </header>
-    <aside>
-        <nav id="sidebar">
-            <div class="sidebar-header">
-                <h3>Наши статьи</h3>
-            </div>
-            <ul class="list-unstyled components">
-                <li><a href="/">Земля</a></li>
-                <li><a href="#">Люди</a></li>
-                <li><a href="/test">Тестовая страница</a></li>
-                <li><a href="#">О нас</a></li>
-                <li><a href="#">Галерея</a></li>
-                <li><a href="#">Контакты</a></li>
-            </ul>
-        </nav>
-    </aside>
-
-    <div id="content">
-        <div id="content-holder">
-            <main role="main" class="container">
-                <div id="high-gear-html">
-                {% block content %}{% endblock %}
-                </div>
-            </main>
-        </div>
+<header>
+    <div class="topnav">
+        <a href="/">Клуб любителей матушки Земли</a>
+        <aside>
+            <nav role="navigation">
+                <ul>
+                    <li><a href="#">Наши статьи</a>
+                        <ul class="dropdown">
+                            <li><a href="#">Земля</a></li>
+                            <li><a href="#">Вода</a></li>
+                            <li><a href="#">Огонь</a></li>
+                            <li><a href="#">Воздух</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </aside>
+        {% if current_user.is_authenticated %}
+        <a class="navbar-brand" href="/logout" style="color:FFFFFF; position:absolute; left:80%">{{ current_user.name
+            }}</a>
+        {% else %}
+        <p>
+            <a class="btn btn-dark" href="/register">Зарегистрироваться</a>
+            <a class="btn btn-dark" href="/login">Войти</a>
+        </p>
+        {% endif %}
     </div>
+</header>
+
+<div id="content">
+    <div id="content-holder">
+        <main role="main" class="container">
+            <div id="high-gear-html">
+                {% block content %}{% endblock %}
+            </div>
+        </main>
+    </div>
+</div>
 
 <footer class="py-3">
-         <div class="copy-bottom-txt text-center py-3">
-            <p>
-               © 2020 Name Site. All Rights Reserved | Design by <a href="#" target="_blank">Pomor and 4ekhov</a>
-            </p>
-         </div>
-         <div class="social-icons mt-lg-3 mt-2 text-center">
-            <ul>
-               <li><a href="#"><span class="fa fa-telegram"></span></a></li>
-               <li><a href="#"><span class="fa fa-vk"></span></a></li>
-               <li><a href="#"><span class="fa fa-steam"></span></a></li>
-            </ul>
-         </div>
-    </footer>
-    <!-- CDN подключение иконок fontawesome -->
-    <script src="https://use.fontawesome.com/df966d76e1.js"></script>
+    <div class="copy-bottom-txt text-center py-3">
+        <p>
+            © 2020 Zemel'ka. All Rights Reserved | Design by <a href="#" target="_blank">Pomor and 4ekhov</a>
+        </p>
+    </div>
+    <div class="social-icons mt-lg-3 mt-2 text-center">
+        <ul>
+            <li><a href="#"><span class="fa fa-telegram"></span></a></li>
+            <li><a href="#"><span class="fa fa-vk"></span></a></li>
+            <li><a href="#"><span class="fa fa-steam"></span></a></li>
+        </ul>
+    </div>
+</footer>
+<!-- CDN подключение иконок fontawesome -->
+<script src="https://use.fontawesome.com/df966d76e1.js"></script>
 </body>
 
 
