--- a/flask_app/env/templates/404.html
+++ b/flask_app/env/templates/404.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Карта</h1>
-<img src="{{way}}" height="450" width="600">
+<h1>Страница недоступна</h1>
 <p>{{message}}</p>
 {% endblock %}
