--- a/flask_app/env/templates/profile.html
+++ b/flask_app/env/templates/profile.html
@@ -16,7 +16,7 @@
 </div>
 {% endfor %}
 <div>
-<a href="news" class="btn btn-secondary">Добавить новость</a>
+<a href="../news" class="btn btn-secondary">Добавить новость</a>
 </div>
 <div>
 <a class="btn btn-danger" href="/logout">Выйти из аккаунта</a>
