--- a/flask_app/env/templates/type_article.html
+++ b/flask_app/env/templates/type_article.html
@@ -5,8 +5,9 @@
 
 <div class="container">
     <img src="static/icons/{{way}}" height="80" width="80">
+    <img src="static/icons/{{pic}}" alt="img" height="210" width="580">
     <div id="rectangle"></div>
-    <div class="centered">Статья</div>
+    <div class="centered" style="color:#947b00;">Статья</div>
 </div>
 <div class="column">
     <p>{{ column1 }}</p>
@@ -26,7 +27,7 @@
     </p>
     <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
 </form>
-{% else %}
+{% endif %}
 {% if article_score == 1 %}
 <div class="rating-result">
     <span class="active"></span>
@@ -72,6 +73,6 @@
     <span class="active"></span>
 </div>
 {% endif %}
-{% endif %}
+
 
 {% endblock %}
