--- a/flask_app/env/templates/base.html
+++ b/flask_app/env/templates/base.html
@@ -7,210 +7,7 @@
     <link rel="icon" href="data:;base64,=">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <style>
-    .Site {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-    }
-    #content-holder{
-    padding-left: 10%;
-    padding-right: 10%;
-    margin: 5%;
-    background: #333;
-    -webkit-border-bottom-right-radius: 2%;
-    -webkit-border-top-right-radius: 2%;
-    -webkit-border-bottom-left-radius: 2%;
-    -webkit-border-top-left-radius: 2%;
-
-    }
-    nav#sidebar {
-    color: #FFFFFF;
-    }
-    .topnav {
-    overflow: hidden;
-    background-color: #333;
-    }
-
-    .topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    }
-
-    .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-    }
-
-    .topnav a.active {
-    background-color: #4CAF50;
-    color: white;
-    }
-    div#content {
-    color: #FFFFFF;
-    padding-left: 20%;
-    padding-right: 20%;
-    flex: 1;
-    }
-    aside.in-header-left {
-    position:relative;
-    padding: 10px;
-    float: left;
-    }
-    aside.in-header-right {
-    position:relative;
-    padding: 10px;
-    float: right;
-    }
-    a {
-    color: #FFFFFF;
-    }
-    a:hover {
-    color: #CE242B;
-    text-decoration: none;
-    }
-    .CAPTCHA{
-    color: #DCDCDC;
-    font-size: 8pt;
-    }
-    #rectangle {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100px;
-    height: 40px;
-    background: #1a1a1a;
-    }
-    .container {
-    position: relative;
-    }
-
-    .centered {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
-    footer{background:#1a1a1a;} /*фон подвала */
-        .social-icons ul{
-            list-style: none;
-            display: flex;
-            justify-content: center;
-        }
-        .social-icons ul li a span {
-        color: #947b00;
-        width: 34px;
-        background: #fff;
-        height: 34px;
-        text-align: center;
-        line-height: 34px;
-        border-radius: 20px;
-        font-size: 13px;
-        margin: 0px 2px;
-        border-radius: 20px;
-        font-size: 14px;
-        margin: 0px 2px;
-        transition: 0.5s all;
-        -webkit-transition: 0.5s all;
-        transition: 0.5s all;
-        -moz-transition: 0.5s all;
-        }
-        .social-icons ul li a span:hover{color:#0ccbf1;}
-        .copy-bottom-txt p{font-size:18px;
-        color:#fff;
-        }
-        .social-icons ul li:nth-child(2){
-            margin: 0 10px;
-        }
-        .copy-bottom-txt p a {
-        font-size: 18px;
-        color:#947b00;
-        letter-spacing: 1px;
-        transition: .4s;
-        }
-        .copy-bottom-txt p a:hover {
-        color: #000;
-        text-decoration: underline;
-        padding-top: 4px;
-        font-weight: 700;
-        }
-        .column {
-        -webkit-column-width: 200px;
-        -moz-column-width: 200px;
-        column-width: 200px;
-        -webkit-column-count: 3;
-        -moz-column-count: 3;
-        column-count: 3;
-        -webkit-column-gap: 30px;
-        -moz-column-gap: 30px;
-        column-gap: 30px;
-        -webkit-column-rule: 1px solid #ccc;
-        -moz-column-rule: 1px solid #ccc;
-        column-rule: 1px solid #ccc;
-       }
-
-    .dropbtn {
-        background-color: #947b00;
-        color: white;
-        padding: 16px;
-        font-size: 16px;
-        border: none;
-    }
-
-    .dropdown {
-        position: relative;
-        display: inline-block;
-    }
-
-    .dropdown-content {
-        display: none;
-        position: fixed;
-        z-index: 1;
-        background-color: #1a1a1a;
-        min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    }
-
-    .dropdown-content a {
-        color: white;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-    }
-
-    .dropdown-content a:hover {background-color: #999999;}
-
-    .dropdown:hover .dropdown-content {display: block;}
-
-    .dropdown:hover .dropbtn {background-color: #615100;}
-
-    .rating-result {
-	width: 265px;
-	margin: 0 auto;
-    }
-    .rating-result span {
-        padding: 0;
-        font-size: 32px;
-        margin: 0 3px;
-        line-height: 1;
-        color: lightgrey;
-        text-shadow: 1px 1px #bbb;
-    }
-    .rating-result > span:before {
-        content: '★';
-    }
-    .rating-result > span.active {
-        color: gold;
-        text-shadow: 1px 1px #c60;
-    }
-
-
-    </style>
+    <link href="static/css/main.css" rel="stylesheet" type="text/css">
     <title>{{title}}</title>
 </head>
 
